[metadata]
name = balderhub-snmpagent
description = balderhub-snmpagent: balderhub package for testing snmp agents
author = Max Stahlschmidt and others
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hub.balder.dev/snmpagent
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/balderhub-snmpagent
    Tracker=https://github.com/balder-dev/balderhub-snmpagent/issues

[options]
packages =
    balderhub.snmpagent
    balderhub.snmpagent.lib
    balderhub.snmpagent.lib.features
    balderhub.snmpagent.lib.setup_features
    balderhub.snmpagent.lib.utils
    balderhub.snmpagent.scenarios
    balderhub.snmpagent.scenarios.base
install_requires =
    baldertest>=0.1.0b5
    pysnmp>=4.4.12
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no
